public/css/styles.css
body {
    background: radial-gradient(#dcb42dc1, #62a12fd3);
    /* background-image: url("/images/tabletop.jpg"); */
    background-size: cover;
    position: relative;
    bottom: 20px;
}

/* animated background */

body::after {
    content: "";
    display: block;
    height: inherit;
    background: url("/images/wavybackground.jpg");
    background-size:cover; 
    background-repeat:no-repeat;
    position: absolute;
    top: 0px;
    right: -10px;
    bottom: -40px;
    left: -10px;
    opacity: .49;

    animation-name: MOVE-BG, GLITCH-BG;
  animation-duration: 11s, 5s;
  animation-fill-mode: forwards;
  animation-timing-function: ease-in-out;
  animation-iteration-count: infinite;
  animation-direction: alternate;
  animation-composition: add;
}

@keyframes MOVE-BG {
    from {
        background-position: left top; background-size: 130%;
    }
    to { 
        background-position: right top; background-size: 130%;
    }
 }

 @keyframes GLITCH-BG {
    from {
        background-position: left top; background-size: 130%;
    }
    to { 
        background-position: left bottom; background-size: 130%;
    }
 }

 body::before {
    content: "";
    display: block;
    height: inherit;
    background: url("/images/gradient.jpg");
    background-size: auto; 
    background-repeat:no-repeat;
    position: absolute;
    top: -20px;
    right: -20px;
    bottom: -40px;
    left: -20px;
    opacity: .89;

    animation-name: MOVE2-BG, GLITCH2-BG;
  animation-duration: 90s, 20s;
  animation-fill-mode: forwards;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  animation-direction: alternate;
  animation-composition: add;
}

@keyframes MOVE2-BG {
    from {
        background-position: left top; background-size: 200%;
    }
    to { 
        background-position: right top; background-size: 200%;
    }
 }

 @keyframes GLITCH2-BG {
    from {
        background-position: left top; background-size: 200%;
    }
    to { 
        background-position: left bottom; background-size: 200%;
    }
 }

/* 

 body::after {
    content: "";
    display: block;
    height: inherit;
    background: url("/images/grainy-filter.jpg");
    background-size:auto; 
    background-repeat:round;
    position: absolute;
    top: -20px;
    right: -20px;
    bottom: -20px;
    left: -20px;
    opacity: .02;

    animation-name: MOVE2-BG, GLITCH2-BG;
  animation-duration: 10s, 1s;
  animation-fill-mode: forwards;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  animation-direction: normal;
  animation-composition: add;
}

@keyframes MOVE2-BG {
    from {
        background-position: center; background-size: 130%;
    }
    to { 
        background-position: -100px 0px; background-size: 120%;
    }
 }

 @keyframes GLITCH2-BG {
    from {
        background-position: -100px 0px; background-size: 120%;
    }
    to { 
        background-position: center; background-size: 130%;
    }
 }

 */

/* element tags */
 h1 {
    text-align: center;
    font-family: 'Lumanosimo', cursive;
    color: rgb(224, 252, 252);
    text-shadow: 1px 1px 10px rgb(220, 180, 0), .5px .5px 3px rgb(63, 52, 0);
    font-size: 5vw;
}

h2 {
    color: #57385cdf;
    text-shadow: .5px .5px 1px goldenrod;
    font-size: 2rem;
}

a {
    padding: 4px 7px 9px;
    margin-bottom: -2px;
    border: solid;
    border-bottom-width: 0;
    border-width: 1px;
    border-radius: 35% 35% 0 0;
    border-color: #57385c;
    font-size: 1.3rem;
    box-shadow: 0px -1px 5px 0px rgba(68, 68, 68, 0.594);
    text-decoration-line: none;
    font-synthesis: weight;
    font-weight: 900;
    color: black;
    position: relative;
    z-index: 2;
}

a:hover {
    margin-top: -1px;
    transform: translate(0, -1px);
}

input[type='text'] {
    border-radius: 5%;
    font-family: 'Space Grotesk', sans-serif;
    font-size: large;
    outline-color: dimgrey;
}

input[type="text"]:focus {
    outline: none;
    box-shadow: inset 0 0 1px 1px #7d2f4185;
}

input[type="checkbox"]:checked+label {
    text-decoration: line-through 2px;
    text-decoration-color: #483d4a96;
    color: transparent;
    text-shadow: 0 0 1.5px #483d4ad8;
}

button[type='submit'] {
    border-radius: 7.5%;
    font-family: 'Space Grotesk', sans-serif;
    font-size: large;
    height: 30px;
    min-width: 120px;
    background-color: #57385c;
    color: blanchedalmond;
}

button[type="submit"]:hover {
    outline: none;
    box-shadow: 0 0 1px .25px rgb(5, 5, 5);
    color: rgb(254, 245, 230);
}

footer {
    align-self: end;
    font-family: 'Space Grotesk', sans-serif;
    text-shadow: .5px .5px 1px rgb(220, 180, 0), .25px .25px .5px rgb(63, 52, 0);
}

input[type="text"] {
    text-align: center;
    height: 30px;
    font-size: large;
    font-weight: 200;
    margin-right: 10px;
    margin-bottom: 10px;
}

/* class tags */

.h1-container {
    display: block;
    padding: 10px 10% 0 10%;
    background-color: transparent;
    position: relative;
}

.alignment-box {
    display: block;
    margin: 6% 5% 20% 5%;
    background-color: transparent;
    position: relative;
    min-height: 100vh;
}

.list-menu {
    width: 70%;
    max-width: 650px;
    margin: auto;
    display: flex;
    justify-content: space-evenly;
    padding: 0;
    font-family: 'Space Grotesk', sans-serif;
    position: relative;
    z-index: 1;
}

.tab-main {
    background-color: rgb(220, 230, 200);
}

.tab-work {
    background-color: rgb(244, 230, 175);
}

.tab-chores {
    background-color: blanchedalmond;
}

.todays-date {
    margin-top: -15px;
    text-align: center;
}

.list-main {
    justify-content: center;
    background-color: rgb(220, 230, 200);
    border: 6px #57385c;
    border-style: ridge groove;
    width: 70%;
    max-width: 650px;
    padding: 20px;
    font-family: 'Space Grotesk', sans-serif;
    font-size: large;
    box-shadow: 0px 0px 20px -2px rgba(219, 219, 219, 0.594), 0 0 3px 1px rgba(34, 34, 34, 0.723);
    margin: auto;
    margin-top: -3px;
    position: relative;
    z-index: 3;
    border-radius: 1%;
}

.list-work {
    background-color: rgb(244, 230, 175);
    justify-content: center;
    border: 6px #57385c;
    border-style: ridge groove;
    width: 70%;
    max-width: 650px;
    padding: 20px;
    font-family: 'Space Grotesk', sans-serif;
    font-size: large;
    box-shadow: 0px 0px 25px -5px rgba(219, 219, 219, 0.594);
    margin: auto;
    margin-top: -3px;
    position: relative;
    z-index: 3;
    border-radius: 1%;
}

.list-chores {
    background-color: blanchedalmond;
    justify-content: center;
    border: 6px #57385c;
    border-style: ridge groove;
    width: 70%;
    max-width: 650px;
    padding: 20px;
    font-family: 'Space Grotesk', sans-serif;
    font-size: large;
    box-shadow: 0px 0px 25px -5px rgba(219, 219, 219, 0.594);
    margin: auto;
    margin-top: -3px;
    position: relative;
    z-index: 3;
    border-radius: 1%;
}

.new-item-form {
    padding: 20px;
    font-family: 'Space Grotesk', sans-serif;
    display: flex;
    justify-content: center;
}

